# FxLifeSheet

./: Dockerfile  README.md
backend/: .gitignore  Cargo.toml
backend/src/: models.rs
backend/src/models/: core.rs  questions.rs
backend/src/models/collector/: raw_data.rs
backend/src/models/core/: viz_metadata.rs
backend/src/models/questions/: commands.rs  question_options.rs  viz_categories.rs  viz_questions.rs
db/: migrate_to_new.sql  schema.sql
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.scss  App.tsx  Tooltip.module.css  stylesheets.module.scss
frontend/src/components/: CalendarViz.tsx  DateElements.tsx  LineChartViz.tsx  Tooltip.tsx  VizBuilder.tsx
frontend/src/models/: ArrayDateData.test.ts  category_data.ts  constants.ts  date_data.ts  question_data.ts
frontend/src/utils/: date.test.ts  date.ts
